--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Onuba Sushi - restaurante de comida japonesa en Huelva</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 		integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/KFPRJ8+BX+Bs18GB8=" crossorigin="" />
-  <script type="module" crossorigin src="./assets/js/index-BxClvSgw.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/css/index-DJlpAukr.css">
+  <script type="module" crossorigin src="/onubasushi/assets/js/index-DwlYDH1e.js"></script>
+  <link rel="stylesheet" crossorigin href="/onubasushi/assets/css/index-EpPDl2sO.css">
 </head>
 
 <body>
